--- a/mzc/templates/contact.html
+++ b/mzc/templates/contact.html
@@ -1,12 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-   <h2>welcome to mountzion</h2> 
-</body>
-</html>
+
+{% extends 'base.html' %}
+
+{% block mycontent %}
+
+<div class="container"></div>
+<div class="row">
+
+    <div class="col col-12 col-sm-6 col-md-4">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, laborum recusandae expedita voluptatem architecto esse eaque fuga dolores molestiae a quos mollitia adipisci perferendis reprehenderit deleniti ut magni voluptatum quisquam.
+    </div>
+
+    <div class="col col-12 col-sm-6 col-md-8">
+            <table class="table">
+                    <tr>
+                        <td>Name</td>
+                        <td><input type="text" class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td>roll number</td>
+                        <td><input type="text" class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td>Admission number</td>
+                        <td><input type="text" class="form-control"></td>  
+                    </tr>
+                    <tr>
+                        <td><button class="btn btn-danger">submit</button></td>
+                    </tr>
+                </table>
+
+
+    </div>   
+</div>
+
+{% endblock %}
+
+   
