--- a/mzc/templates/base.html
+++ b/mzc/templates/base.html
@@ -18,11 +18,14 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact</a>
                   </li>
+
                   <li class="nav-item">
-                    <a class="nav-link" href="/">Index</a>
+                    <a class="nav-link" href="/faculty">faculty</a>
                   </li>
+                  
+                  
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+                    <a class="nav-link disabled" href="#">Default</a>
                   </li>
                 </ul>
               </nav>
