--- a/mzc/templates/faculty.html
+++ b/mzc/templates/faculty.html
@@ -3,8 +3,14 @@
      {% block mycontent %}
 
          {% load crispy_forms_tags %}
+         
+         <form method="POST" novalidate>
+         {% csrf_token %}
 
          {{ form|crispy }}
+
+         <button type="submit" class="btn btn-success">Save Faculty</button>
+        </form>
 
 
 
